# Benchmarking-Deep-Learning-Frameworks

./: Dockerfile  README.md
CNN/cpp/: CMakeLists.txt  getdata.py  main.cpp  mnist_cnn.pt  mnist_cnn_cpu.pt  mnist_cnn_cuda.pt  test.cpp  test_log_2025-05-11_0701.txt  test_log_2025-05-11_0702.txt  train_log_2025-05-11_0659.txt  train_log_2025-05-11_0701.txt  train_log_2025-05-13_0054.txt  train_log_2025-05-13_0055.txt  train_log_2025-05-13_0056.txt  train_log_2025-05-16_0335.txt  train_log_2025-05-16_0336.txt  train_log_2025-05-16_0341.txt
CNN/pytorch/: main.py  mnist_cnn_preloaded.pth  mnist_cnn_preloaded_cuda.pth  test.py  train_log_2025-05-13_0001.txt  train_log_2025-05-13_0046.txt  train_log_2025-05-13_0049.txt  train_log_2025-05-13_0059.txt
CNN/tensorflow/: inference_log_2025-05-13_0235.txt  inference_log_2025-05-13_0237.txt  inference_log_2025-05-13_0238.txt  inference_log_2025-05-15_0040.txt  main.py  mnist_cnn_tf_preloaded.h5  test.py  train_log_2025-05-13_0224.txt  train_log_2025-05-13_0228.txt  train_log_2025-05-15_0040.txt
CTC/cpp/: CMakeLists.txt  CTCTest.cpp  cpuctc_inference_log_2025-05-13_0225.txt  ctc.pt  cudactc_inference_log_2025-05-13_0224.txt  main.cpp  train_log_2025-05-12_1120.txt  train_log_2025-05-12_1121.txt  train_log_2025-05-13_0213.txt  train_log_2025-05-13_1400.txt  train_log_2025-05-13_1401.txt  train_log_2025-05-13_1421.txt  train_log_2025-05-13_1422.txt
CTC/cpp/data/: getdata.py  testdata.py
CTC/pytorch/: ctc_inference_log_2025-05-13_0232.txt  ctc_inference_log_2025-05-13_0233.txt  main.py  test.py  train_log_2025-05-13_0229cuda.txt  train_log_2025-05-13_0230.txt  train_log_2025-05-13_1402.txt  train_log_2025-05-13_1420.txt  train_log_2025-05-13_1423.txt
CTC/tensorflowdata/: getdata.py  main.py  test.py  train_log_2025-05-13_0435.txt  train_log_2025-05-13_0439.txt  train_log_2025-05-15_0045.txt  train_log_2025-05-15_0047.txt
RNN/cpp/: CMakeLists.txt  IMDBdataset.h  RNNTest.cpp  SentimentLSTMModel.h  main.cpp  test_log_2025-05-11_1100.txt  test_log_2025-05-11_1102.txt  test_log_2025-05-11_1126.txt  test_log_2025-05-11_1127.txt  train_log_2025-05-11_1030.txt  train_log_2025-05-11_1033.txt  train_log_2025-05-11_1044.txt  train_log_2025-05-11_1115.txt  train_log_2025-05-11_1116.txt  train_log_2025-05-13_0202.txt
RNN/cpp/data/: getdata.py
RNN/pytorch/: main.py  test.py  test_log_2025-05-13_0209cuda.txt  test_log_2025-05-13_0210cpu.txt  test_log_2025-05-15_0325.txt  train_log_2025-05-13_0205.txt
RNN/tensorflow/: main.py  models.py  test.py  train_log_2025-05-13_0302.txt  train_log_2025-05-13_0303.txt  train_log_2025-05-13_0315.txt  train_log_2025-05-15_0050.txt
Transformer/cpp/: CMakeLists.txt  TTest.cpp  main.cpp  train_log_2025-05-13_0245.txt  train_log_2025-05-13_0255.txt  transformer_inference_log_2025-05-13_0251.txt  transformer_inference_log_2025-05-13_0445.txt  transformer_inference_log_2025-05-13_0450.txt  transformer_inference_log_2025-05-13_0502.txt
Transformer/pytorch/: inference_log_2025-05-13_0401.txt  inference_log_2025-05-15_0125.txt  main.py  test.py  train_log_2025-05-13_0355.txt  train_log_2025-05-15_0108.txt
(+5 files in other folders)
